Content of landing page

--- a/index.html
+++ b/index.html
@@ -4,56 +4,76 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Parallax demonstration</title>
 </head>
 <body>
-    <main>
-        <section>
-            <div class="box image_1"></div>
+    <header>
+        <h1>Welcome to <span>Art Academy</span></h1>
+    </header>
 
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem quibusdam sunt dolores rerum quidem ducimus iste laborum, incidunt voluptatem quisquam facilis id enim culpa fuga eum molestiae vitae odit.
-            </p>
+    <main>   
+        <section>
+            <article>
+                <h2>Our philosophy</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem quibusdam sunt dolores rerum quidem ducimus iste laborum, incidunt voluptatem quisquam facilis id enim culpa fuga eum molestiae vitae odit.
+                </p>
+            </article>
         </section>
 
-        <section>
-            <div class="box image_2"></div>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus nisi quam atque nemo aliquam voluptatem, totam quibusdam repellat necessitatibus quas? Voluptates non obcaecati ab inventore illo, harum corrupti doloremque aperiam!
-            </p>
+        <section class="courses">
+            <div class="watercolor" alt="Woman watercolor portrait.">
+                <img src="images/watercolor-467px.jpg">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat iure ratione ea praesentium vero modi vel aliquid iusto temporibus molestias, provident ipsa tenetur saepe itaque consequuntur! Assumenda quibusdam numquam ducimus.</p>
+            </div>
+            <div class="cartoon" alt="Elephant cartoon">
+                <img src="images/elephant-480px.jpg">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos eos beatae qui perferendis! Eligendi aliquid tempora temporibus culpa voluptatum modi nesciunt ratione doloremque, voluptatibus eum ex vitae dignissimos praesentium expedita!</p>
+            </div>
+            <div class="tattoo">
+                <img src="images/tattoo-480px.jpg" alt="Cat tattoo">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste recusandae nihil saepe totam et inventore obcaecati quis accusantium minima aut facere veritatis iure rem quo fugit, ut culpa dolorum nobis!</p>
+            </div>
         </section>
 
-        <section>
+        <section class="objectives">
             <div>
+                <img src="images/increase-640px.jpg" alt="">
+                <img src="images/business-idea-640px.jpg" alt="">
+            </div>
+            <ul>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+                <li>Lorem ipsum  Recusandae, quidem, exercitationem unde.</li>
+                <li>Lorem impum nobis ullam nihil.</li>
+            </ul>
+        </section>
+    
+        <section class="sign-up">
+            <div class="box">
                 <img src="">
-
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero quasi aperiam illum quam, quas voluptate iusto aliquid dolor ipsa ut in cum blanditiis sequi, quisquam rem vero laudantium mollitia ullam.
                 </p>
             </div>
 
-            <div>
-                <form action="#" method="post">
-                    <p>
-                        <label for="name">Nome:</label>
-                        <input type="text" id="name" class="name">
-                    </p>
-
-                    <p>
-                        <label for="email">Email:</label>
-                        <input type="email" id="email" class="email">
-                    </p>
-
-                    <p>
-                        <input type="checkbox" id="term">
-                        <label for="term">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae unde veniam</label>
-                    </p>
-
-                    <p>
-                        <button type="submit">Submit</button>
-                    </p>
-                </form>
-            </div>
+            <form action="#" method="post">
+                <p>
+                    <label for="name">Nome:</label>
+                    <input type="text" id="name" class="name">
+                </p>
+                <p>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" class="email">
+                </p>
+                <p>
+                    <input type="checkbox" id="term">
+                    <label for="term">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae unde veniam</label>
+                </p>
+                <p>
+                    <button type="submit">Submit</button>
+                </p>
+            </form>
         </section>
     </main>
 
@@ -61,7 +81,6 @@
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto consequuntur fugiat, eligendi laborum accusamus porro quisquam dolore ut vero libero mollitia perferendis nesciunt. Ut accusantium qui suscipit id reiciendis repellat.
         </p>
-
         <ul>
             <li>Item 1</li>
             <li>Item 2</li>
