--- a/index.html
+++ b/index.html
@@ -23,30 +23,33 @@
         </section>
 
         <section class="courses">
-            <div>
-                <img src="images/watercolor-467px.jpg" alt="Woman watercolor portrait.">
+            <article>
+                <img src="images/watercolor-467px.jpg" alt="Woman watercolor portrait">
+                <h2>Watercolor Painting</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat iure ratione ea praesentium vero modi vel aliquid iusto temporibus molestias
                 </p>
-            </div>
-            <div>
+            </article>
+            <article>
                 <img src="images/elephant-480px.jpg" alt="Elephant cartoon">
+                <h2>Cartoon Drawing</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos eos beatae qui perferendis!
                 </p>
-            </div>
-            <div>
+            </article>
+            <article>
                 <img src="images/tattoo-480px.jpg" alt="Cat tattoo">
+                <h2>Tattoo</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste recusandae nihil saepe totam et inventore obcaecati quis accusantium minima aut 
                 </p>
-            </div>
+            </article>
         </section>
 
         <section class="objectives">
             <div>
-                <img src="images/increase-640px.jpg" alt="">
-                <img src="images/business-idea-640px.jpg" alt="">
+                <img src="images/increase-640px.jpg" alt="A person attracting other">
+                <img src="images/business-idea-640px.jpg" alt="A person trading a creative idea to money">
             </div>
             
             <ul>
@@ -58,7 +61,8 @@
     
         <section class="sign-up">
             <div class="box">
-                <img src="">
+                <img src="images/suricato-400px.jpg">
+                <h2>Who i am?</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero quasi aperiam illum quam, quas voluptate iusto aliquid dolor ipsa ut in cum blanditiis sequi, quisquam rem vero laudantium mollitia ullam.
                 </p>
@@ -67,15 +71,15 @@
             <form action="#" method="post">
                 <p>
                     <label for="name">Nome:</label>
-                    <input type="text" id="name" class="name">
+                    <input type="text" id="name" class="name" name="name">
                 </p>
                 <p>
                     <label for="email">Email:</label>
-                    <input type="email" id="email" class="email">
+                    <input type="email" id="email" class="email" name="email">
                 </p>
                 <p>
-                    <input type="checkbox" id="term">
-                    <label for="term">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae unde veniam</label>
+                    <input type="checkbox" id="term" name="email">
+                    <label for="term">Lorem ipsum dolor sit amet consectetur adipisicing elit.</label>
                 </p>
                 <p>
                     <button type="submit">Submit</button>
@@ -97,6 +101,8 @@
             <li>Item 5</li>
             <li>Item 6</li>
         </ul>
+
+        <p>Developed by <a href="https://www.linkedin.com/in/fabio-correia-souza/" target="_next">Fábio Correia Souza</a>.</p>
     </footer>
 </body>
 </html>
